force-app/main/default/objects/Property_AVM__c/fields/fireplace__c.field-meta.xml
<CustomField>
    <fullName>fireplace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if home has fireplace. false otherwise.</description>
    <inlineHelpText>true if home has fireplace. false otherwise.</inlineHelpText>
    <label>Fireplace</label>
    <type>Checkbox</type>
</CustomField>