force-app/main/default/objects/Property_AVM__c/fields/flood_risk__c.field-meta.xml
<CustomField>
    <fullName>flood_risk__c</fullName>
    <description>Level of flood risk</description>
    <inlineHelpText>Level of flood risk</inlineHelpText>
    <label>Flood Risk</label>
    <length>15</length>
    <type>Text</type>
</CustomField>