force-app/main/default/objects/Property_AVM__c/fields/fsd__c.field-meta.xml
<CustomField>
    <fullName>fsd__c</fullName>
    <description>HouseCanary forecast standard deviation for the HouseCanary rental AVM</description>
    <inlineHelpText>HouseCanary forecast standard deviation for the HouseCanary rental AVM</inlineHelpText>
    <label>FSD</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>