force-app/main/default/objects/Property_AVM__c/fields/garage_parking_of_cars__c.field-meta.xml
<CustomField>
    <fullName>garage_parking_of_cars__c</fullName>
    <description>Number of cars that can be parked in garage areas</description>
    <inlineHelpText>Number of cars that can be parked in garage areas</inlineHelpText>
    <label>Garage parking of cars</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>