force-app/main/default/objects/Property_AVM__c/fields/garage_type_parking__c.field-meta.xml
<CustomField>
    <fullName>garage_type_parking__c</fullName>
    <description>Type of parking area. One of [Attached Garage, Built-in, Carport, Covered, Detached Garage, Garage, Mixed, None, Offsite, Open, Parking Lot, Parking Structure, Paved/Surfaced, Pole, Ramp, Tuckunder, Underground/Basement, Unimproved, Yes]</description>
    <inlineHelpText>Type of parking area. One of [Attached Garage, Built-in, Carport, Covered, Detached Garage, Garage, Mixed, None, Offsite, Open, Parking Lot, Parking Structure, Paved/Surfaced, Pole, Ramp, Tuckunder, Underground/Basement, Unimproved, Yes]</inlineHelpText>
    <label>Garage type parking</label>
    <length>50</length>
    <type>Text</type>
</CustomField>