force-app/main/default/objects/Property_AVM__c/fields/heating__c.field-meta.xml
<CustomField>
    <fullName>heating__c</fullName>
    <description>Type of heating unit. One of [Baseboard, Central, Coal, Convection, Electric, Floor/Wall, Forced air unit, Gas, Geo-thermal, Gravity, Heat Pump, Hot Water, None, Oil, Other, Partial, Propane, Radiant, Solar, Space/Suspended, Steam, Vent, Wood Burning, Yes, Zone]</description>
    <inlineHelpText>Type of heating unit. One of [Baseboard, Central, Coal, Convection, Electric, Floor/Wall, Forced air unit, Gas, Geo-thermal, Gravity, Heat Pump, Hot Water, None, Oil, Other, Partial, Propane, Radiant, Solar, Space/Suspended, Steam, Vent, Wood Burning, Yes, Zone]</inlineHelpText>
    <label>Heating</label>
    <length>40</length>
    <type>Text</type>
</CustomField>