force-app/main/default/objects/Property_AVM__c/fields/HouseCanary_Sync_Allowed__c.field-meta.xml
<CustomField>
    <fullName>HouseCanary_Sync_Allowed__c</fullName>
    <description>Use No of days since housecanary sync was run on the property to aloow the next sync</description>
    <formula>IF(OR(AND((RecordType.Name == &quot;HouseCanary Rental AVM&quot;),((TODAY() - DATEVALUE(CreatedDate)) &gt; $CustomMetadata.Settings__mdt.Universal_Settings.HouseCanary_No_of_DataSync_Days__c)),($Profile.Name == &quot;System Administrator&quot;),(RecordType.Name != &quot;HouseCanary Rental AVM&quot;)) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on the previous date of HouseCanary sync of the property this field is set to true</inlineHelpText>
    <label>HouseCanary Sync Allowed</label>
    <type>Text</type>
</CustomField>