force-app/main/default/objects/Property_AVM__c/fields/Mortgage_Lien_Data_Present__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Lien_Data_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>House Canary Lien Data Present</description>
    <label>Mortgage Lien Data Present</label>
    <type>Checkbox</type>
</CustomField>