force-app/main/default/objects/Property_AVM__c/fields/no_of_buildings__c.field-meta.xml
<CustomField>
    <fullName>no_of_buildings__c</fullName>
    <description>Number of buildings</description>
    <inlineHelpText>Number of buildings</inlineHelpText>
    <label>No of buildings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>