force-app/main/default/objects/Property_AVM__c/fields/no_of_stories__c.field-meta.xml
<CustomField>
    <fullName>no_of_stories__c</fullName>
    <description>Number of floors</description>
    <inlineHelpText>Number of floors</inlineHelpText>
    <label>No of stories</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>