force-app/main/default/objects/Property_AVM__c/fields/number_of_bedrooms__c.field-meta.xml
<CustomField>
    <fullName>number_of_bedrooms__c</fullName>
    <description>Number of bedrooms</description>
    <inlineHelpText>Number of bedrooms</inlineHelpText>
    <label>Number of bedrooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>