force-app/main/default/objects/Property_AVM__c/fields/number_of_units__c.field-meta.xml
<CustomField>
    <fullName>number_of_units__c</fullName>
    <description>Number of units</description>
    <inlineHelpText>Number of units</inlineHelpText>
    <label>Number of units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>