force-app/main/default/objects/Property_AVM__c/fields/other_nation_percentail__c.field-meta.xml
<CustomField>
    <fullName>other_nation_percentail__c</fullName>
    <description>Any crime incidents reported near the block that don’t fall into either the property or violent categories</description>
    <inlineHelpText>Any crime incidents reported near the block that don’t fall into either the property or violent categories</inlineHelpText>
    <label>Other nation percentail</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>