force-app/main/default/objects/Property_AVM__c/fields/panel_number__c.field-meta.xml
<CustomField>
    <fullName>panel_number__c</fullName>
    <description>Flood map panel number that includes the property</description>
    <inlineHelpText>Flood map panel number that includes the property</inlineHelpText>
    <label>Flood panel number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>