force-app/main/default/objects/Property_AVM__c/fields/partial_bath_count__c.field-meta.xml
<CustomField>
    <fullName>partial_bath_count__c</fullName>
    <description>Partial bathroom count, if provided by the county assessor</description>
    <inlineHelpText>Partial bathroom count, if provided by the county assessor</inlineHelpText>
    <label>Partial bath count</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>