force-app/main/default/objects/Property_AVM__c/fields/pool__c.field-meta.xml
<CustomField>
    <fullName>pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the property has a pool</description>
    <inlineHelpText>Whether the property has a pool</inlineHelpText>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>