force-app/main/default/objects/Property_AVM__c/fields/property_nation_percentile__c.field-meta.xml
<CustomField>
    <fullName>property_nation_percentile__c</fullName>
    <description>For the incident category, where the incident count falls within the USA</description>
    <inlineHelpText>For the incident category, where the incident count falls within the USA</inlineHelpText>
    <label>Property nation percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>