force-app/main/default/objects/Property_AVM__c/fields/property_type__c.field-meta.xml
<CustomField>
    <fullName>property_type__c</fullName>
    <description>Type of property. One of [Single Family Residential, Townhouse, Condominium, Manufactured/Mobile Home, Multi-Family, Land, Timeshare, Commercial, Other]</description>
    <inlineHelpText>Type of property. One of [Single Family Residential, Townhouse, Condominium, Manufactured/Mobile Home, Multi-Family, Land, Timeshare, Commercial, Other]</inlineHelpText>
    <label>Property type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>