force-app/main/default/objects/Property_AVM__c/fields/recommended_approach__c.field-meta.xml
<CustomField>
    <fullName>recommended_approach__c</fullName>
    <description>HouseCanary’s suggested course of action to determine the value of the property with high confidence. One of: [No exceptions - Automate, Minor exceptions - Human review, Major exceptions - Onsite review]</description>
    <inlineHelpText>HouseCanary’s suggested course of action to determine the value of the property with high confidence. One of: [No exceptions - Automate, Minor exceptions - Human review, Major exceptions - Onsite review]</inlineHelpText>
    <label>Recommended Approach</label>
    <length>50</length>
    <type>Text</type>
</CustomField>