force-app/main/default/objects/Property_AVM__c/fields/RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>RelatedProperty__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property AVMs</relationshipLabel>
    <relationshipName>Property_AVMs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>