force-app/main/default/objects/Property_AVM__c/fields/roof_cover__c.field-meta.xml
<CustomField>
    <fullName>roof_cover__c</fullName>
    <description>Material the roof is made of. One of [Aluminum, Asbestos, Asphalt, Bermuda, Built-up, Composition Shingle, Concrete, Fiberglass, Gravel/Rock, Gypsum, Masonite/ Cement Shake, Metal, Other, Roll Composition, Slate, Steel, Shingle (Not Wood), Tar &amp; Gravel, Tile, Urethane, Wood, Wood Shake/ Shingles]</description>
    <inlineHelpText>Material the roof is made of. One of [Aluminum, Asbestos, Asphalt, Bermuda, Built-up, Composition Shingle, Concrete, Fiberglass, Gravel/Rock, Gypsum, Masonite/ Cement Shake, Metal, Other, Roll Composition, Slate, Steel, Shingle (Not Wood), Tar &amp; Gravel, Tile, Urethane, Wood, Wood Shake/ Shingles]</inlineHelpText>
    <label>Roof cover</label>
    <length>50</length>
    <type>Text</type>
</CustomField>