force-app/main/default/objects/Property_AVM__c/fields/roof_type__c.field-meta.xml
<CustomField>
    <fullName>roof_type__c</fullName>
    <description>Roof structure. One of [Bowstring Truss, Dome,Flat, Gable, Gable or Hip, Gambrel, Hip, Irr/Cathedral, Mansard, Prestress Concrete, Reinforced Concrete, Rigid frm bar JT, Sawtooth, Shed, Steel frm/truss, Wood Truss]</description>
    <inlineHelpText>Roof structure. One of [Bowstring Truss, Dome,Flat, Gable, Gable or Hip, Gambrel, Hip, Irr/Cathedral, Mansard, Prestress Concrete, Reinforced Concrete, Rigid frm bar JT, Sawtooth, Shed, Steel frm/truss, Wood Truss]</inlineHelpText>
    <label>Roof type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>