force-app/main/default/objects/Property_AVM__c/fields/Sale_History_Data_Present__c.field-meta.xml
<CustomField>
    <fullName>Sale_History_Data_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sale history  Data Present</description>
    <inlineHelpText>Sale history  Data Present</inlineHelpText>
    <label>Sale History Data Present</label>
    <type>Checkbox</type>
</CustomField>