force-app/main/default/objects/Property_AVM__c/fields/sewer__c.field-meta.xml
<CustomField>
    <fullName>sewer__c</fullName>
    <description>Sewage connection. One of [Municipal, None, Storm, Septic, Yes]</description>
    <inlineHelpText>Sewage connection. One of [Municipal, None, Storm, Septic, Yes]</inlineHelpText>
    <label>Sewer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>