force-app/main/default/objects/Property_AVM__c/fields/site_area_acres__c.field-meta.xml
<CustomField>
    <fullName>site_area_acres__c</fullName>
    <description>Total area of the land in acres</description>
    <inlineHelpText>Total area of the land in acres</inlineHelpText>
    <label>Site area acres</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>