force-app/main/default/objects/Property_AVM__c/fields/style__c.field-meta.xml
<CustomField>
    <fullName>style__c</fullName>
    <description>Property architectural style. One of [A-Frame, Bungalow, Cape Cod, Colonial, Contemporary, Conventional, Cottage, Custom, Dome, English, French Provincial, Georgian, High-rise, Historical Log Cabin/Rustic, Mansion, Mediterranean, Modern, Other, Prefab,Modular, Raised Ranch, Ranch\Rambler, Spanish, Traditional, Tudor, Unfinished\Under Construction, Victorian]</description>
    <inlineHelpText>Property architectural style. One of [A-Frame, Bungalow, Cape Cod, Colonial, Contemporary, Conventional, Cottage, Custom, Dome, English, French Provincial, Georgian, High-rise, Historical Log Cabin/Rustic, Mansion, Mediterranean, Modern, Other, Prefab,Modular, Raised Ranch, Ranch\Rambler, Spanish, Traditional, Tudor, Unfinished\Under Construction, Victorian]</inlineHelpText>
    <label>Style</label>
    <length>50</length>
    <type>Text</type>
</CustomField>