force-app/main/default/objects/Property_AVM__c/fields/subdivision__c.field-meta.xml
<CustomField>
    <fullName>subdivision__c</fullName>
    <description>Subdivision as reported to the assessor</description>
    <inlineHelpText>Subdivision as reported to the assessor</inlineHelpText>
    <label>Subdivision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>