force-app/main/default/objects/Property_AVM__c/fields/tax_amount__c.field-meta.xml
<CustomField>
    <fullName>tax_amount__c</fullName>
    <description>Amount in dollars of tax owed on the property</description>
    <inlineHelpText>Amount in dollars of tax owed on the property</inlineHelpText>
    <label>Assessment Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>