force-app/main/default/objects/Property_AVM__c/fields/Tax_History_APN__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_APN__c</fullName>
    <description>Assessor’s Parcel Number or Parcel Identification Number</description>
    <inlineHelpText>Assessor’s Parcel Number or Parcel Identification Number</inlineHelpText>
    <label>Tax History APN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>