force-app/main/default/objects/Property_AVM__c/fields/Tax_History_Assessment_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_Assessment_Year__c</fullName>
    <description>Year the assessment was conducted</description>
    <inlineHelpText>Year the assessment was conducted</inlineHelpText>
    <label>Tax History Assessment Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>