force-app/main/default/objects/Property_AVM__c/fields/Tax_History_Data_Present__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_Data_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>House Canary tax history Data Present</description>
    <label>Tax History Data Present</label>
    <type>Checkbox</type>
</CustomField>