force-app/main/default/objects/Property_AVM__c/fields/Tax_History_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_Tax_Amount__c</fullName>
    <description>Amount in dollars of tax owed on the property</description>
    <inlineHelpText>Amount in dollars of tax owed on the property</inlineHelpText>
    <label>Tax History Tax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>