force-app/main/default/objects/Property_AVM__c/fields/Tax_History_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_Tax_Year__c</fullName>
    <description>Tax year for which the assessment applies</description>
    <inlineHelpText>Tax year for which the assessment applies</inlineHelpText>
    <label>Tax History Tax Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>