force-app/main/default/objects/Property_AVM__c/fields/Tax_History_Total_Assessed_Value__c.field-meta.xml
<CustomField>
    <fullName>Tax_History_Total_Assessed_Value__c</fullName>
    <description>The total assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll in the indicated year.</description>
    <inlineHelpText>The total assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll in the indicated year.</inlineHelpText>
    <label>Tax History Total Assessed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>