force-app/main/default/objects/Property_AVM__c/fields/total_assessed_value__c.field-meta.xml
<CustomField>
    <fullName>total_assessed_value__c</fullName>
    <description>The total current assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll.</description>
    <inlineHelpText>The total current assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll.</inlineHelpText>
    <label>Total assessed value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>