force-app/main/default/objects/Property_AVM__c/fields/total_bath_count__c.field-meta.xml
<CustomField>
    <fullName>total_bath_count__c</fullName>
    <description>Total bathroom count as recorded by the assessor</description>
    <inlineHelpText>Total bathroom count as recorded by the assessor</inlineHelpText>
    <label>Total bath count</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>