force-app/main/default/objects/Property_AVM__c/fields/value_report_static_Link__c.field-meta.xml
<CustomField>
    <fullName>value_report_static_Link__c</fullName>
    <description>House Canary value report static Link</description>
    <inlineHelpText>House Canary value report PDF Link</inlineHelpText>
    <label>Value Report Static Link</label>
    <type>Url</type>
</CustomField>