force-app/main/default/objects/Property_AVM__c/fields/violent_county_percentile__c.field-meta.xml
<CustomField>
    <fullName>violent_county_percentile__c</fullName>
    <description>For the incident category, where the incident count falls within the county</description>
    <inlineHelpText>For the incident category, where the incident count falls within the county</inlineHelpText>
    <label>Violent county percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>