force-app/main/default/objects/Property_AVM__c/fields/violent_incidents__c.field-meta.xml
<CustomField>
    <fullName>violent_incidents__c</fullName>
    <description>Count of incidents in the category</description>
    <inlineHelpText>Count of incidents in the category</inlineHelpText>
    <label>Violent incidents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>