force-app/main/default/objects/Property_AVM__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <type>TextArea</type>
</CustomField>