force-app/main/default/objects/Property_AVM__c/fields/water__c.field-meta.xml
<CustomField>
    <fullName>water__c</fullName>
    <description>Water connection. One of [Cistern, Municipal, None, Spring, Well]</description>
    <inlineHelpText>Water connection. One of [Cistern, Municipal, None, Spring, Well]</inlineHelpText>
    <label>Water</label>
    <length>30</length>
    <type>Text</type>
</CustomField>