force-app/main/default/objects/Property_AVM__c/fields/X12_Month_Value__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Value__c</fullName>
    <description>Forecasted rental value information for 12 months with ZIP level Rental Price Index</description>
    <inlineHelpText>Forecasted rental value information for 12 months with ZIP level Rental Price Index</inlineHelpText>
    <label>12 Month Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>