force-app/main/default/objects/Property_AVM__c/fields/X6_Month_Value__c.field-meta.xml
<CustomField>
    <fullName>X6_Month_Value__c</fullName>
    <description>Forecasted rental value information for 6 months with ZIP level Rental Price Index</description>
    <inlineHelpText>Forecasted rental value information for 6 months with ZIP level Rental Price Index</inlineHelpText>
    <label>6 Month Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>