force-app/main/default/objects/Property_AVM__c/fields/zone__c.field-meta.xml
<CustomField>
    <fullName>zone__c</fullName>
    <description>Flood zone the property is in. Zone descriptions</description>
    <inlineHelpText>Flood zone the property is in. Zone descriptions</inlineHelpText>
    <label>Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>