force-app/main/default/objects/Property_AVM__c/fields/zoning__c.field-meta.xml
<CustomField>
    <fullName>zoning__c</fullName>
    <description>County-specific property zoning</description>
    <inlineHelpText>County-specific property zoning</inlineHelpText>
    <label>Zoning</label>
    <length>60</length>
    <type>Text</type>
</CustomField>