force-app/main/default/objects/Property_AVM__c/recordTypes/HouseCanary_Rental_AVM.recordType-meta.xml
<RecordType>
    <fullName>HouseCanary_Rental_AVM</fullName>
    <active>true</active>
    <description>HouseCanary Rental AVM</description>
    <label>HouseCanary Rental AVM</label>
</RecordType>