force-app/main/default/objects/Property_AVM__c/recordTypes/Red_Bell_AVM.recordType-meta.xml
<RecordType>
    <fullName>Red_Bell_AVM</fullName>
    <active>true</active>
    <description>Red Bell AVM</description>
    <label>Red Bell AVM</label>
</RecordType>